<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2016-2022 Hedera Hashgraph, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<!-- Required Maven Version -->
	<modelVersion>4.0.0</modelVersion>

	<!-- Parent Configuration -->
	<parent>
		<groupId>com.swirlds</groupId>
		<artifactId>swirlds-platform</artifactId>
		<version>0.29.2-orvw.1</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<!-- Project Configuration -->
	<artifactId>swirlds-jasperdb</artifactId>
	<packaging>jar</packaging>

	<!-- Project Properties -->
	<properties>
		<!-- Maven and Java Configuration -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<!-- Dependency versions -->
		<commons-lang3.version>${dep.commons.lang3.version}</commons-lang3.version>
		<eclipse.collections.version>10.4.0</eclipse.collections.version>
		<mockito.version>${dep.mockito.version}</mockito.version>

		<sonar.coverage.jacoco.xmlReportPaths>${sonar.jacoco.path},${sonar.jacoco.alt.path}
		</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<!-- Dependencies -->
	<dependencies>
		<!-- Swirlds -->
		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-common</artifactId>
			<version>0.29.2-orvw.1</version>
		</dependency>

		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-logging</artifactId>
			<version>0.29.2-orvw.1</version>
		</dependency>

		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-virtualmap</artifactId>
			<version>0.29.2-orvw.1</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.collections</groupId>
			<artifactId>eclipse-collections-api</artifactId>
			<version>${eclipse.collections.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.collections</groupId>
			<artifactId>eclipse-collections</artifactId>
			<version>${eclipse.collections.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>

		<!-- Log4j -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
		</dependency>

		<!-- JUnit 5.x -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-common-test</artifactId>
			<version>0.29.2-orvw.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<!-- Profiles -->
	<profiles>
		<!-- Automatic Profile (not for manual use) -->
		<profile>
			<id>default-variable-maven-opts</id>
			<activation>
				<property>
					<name>!env.MAVEN_OPTS</name>
				</property>
			</activation>
			<properties>
				<env.MAVEN_OPTS/>
			</properties>
		</profile>

		<!-- Automatic Profile (not for manual use) -->
		<profile>
			<id>default-variable-argLine</id>
			<activation>
				<property>
					<name>!argLine</name>
				</property>
			</activation>
			<properties>
				<argLine/>
			</properties>
		</profile>
	</profiles>

	<!-- $$BEGIN_OPEN_REVIEW_REMOVE_1$$ -->
	<!-- Build Configuration -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>@{argLine} ${env.MAVEN_OPTS}
						--add-opens com.swirlds.jasperdb/com.swirlds.jasperdb.collections=ALL-UNNAMED
						--add-opens com.swirlds.jasperdb/com.swirlds.jasperdb.utilities=ALL-UNNAMED
						--add-opens com.swirlds.jasperdb/com.swirlds.jasperdb.files=ALL-UNNAMED
						--add-opens com.swirlds.jasperdb/com.swirlds.jasperdb=ALL-UNNAMED
					</argLine>
					<failIfNoTests>true</failIfNoTests>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
					<useSystemClassLoader>true</useSystemClassLoader>
					<excludes>
						<exclude>**/*HammerTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
